FindBugs run